# predicate_trace

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  pred_trace_pass.cpp  pred_trace_pass.h  pred_trace_support.cpp  predicate_trace.fbs  predicate_trace_fb.h  predicate_trace_pass.cpp  predicate_trace_pass.h  predicate_trace_support.cpp
.github/workflows/: predicate_trace.yml
tests/: run_tests.cpp  test_01.cpp  test_bswap_00.cpp  test_fabs_00.cpp  test_fn_00.cpp  test_global_00.cpp  test_if_00.cpp  test_if_01.cpp  test_ifelse_00.cpp
